fixing background shift and resize
also fixed the buttons not working right ;)

--- a/css/site.css
+++ b/css/site.css
@@ -1,59 +1,62 @@
+body{
+    background: #000;
+}
 .previous{
-                left: 20px;
-            }
-            .next{
-                right: 20px;
-            }
-            .arrow{
-                position: absolute;
-                top: 100px;
-                top: 40vh;
-                cursor: pointer;
-                text-shadow: 1px 1px 10px #333;
-            }
-            .info{
-                position: absolute;
-                top: 10px;
-                top: 5vh;
-                right: 20px;
-                cursor: pointer;
-                text-shadow: 1px 1px 10px #333;
-            }
-            #moreInfo{
-                height:0px; /* toggles between 0 and 300 */
-                opacity: 0;
-                padding:20px;
-                width: 100%;
-                width: 100vw;
-                position: fixed;
-                bottom: 0;
-                left:0;
-                background-color:rgba(0,0,0,0.85);
-            }
-            #map{
-                height: 300px;
-                width:400px;
-                float:left;
-                
-            }
-            #map-info{
-                float:left;
-                padding-left: 20px;
-                color: #eee;
-            }
-            #map-exit{
-                float:right;
-                cursor: pointer;
-                text-shadow: 1px 1px 10px #333;
-                padding-right:40px;
-            }
-            .hoverable:hover{
-                text-shadow: 1px 1px 5px #000;
-            }
-            video#bgvid {
-                position: fixed; left: 0; top: 0;
-                min-width: 100%; min-height: 100%;
-                width: auto; height: auto; z-index: -100;
-                background: url(default.png) no-repeat;
-                background-size: cover;
-            }
+    left: 20px;
+}
+.next{
+    right: 20px;
+}
+.arrow{
+    position: absolute;
+    top: 100px;
+    top: 40vh;
+    cursor: pointer;
+    text-shadow: 1px 1px 10px #333;
+}
+.info{
+    position: absolute;
+    top: 10px;
+    top: 5vh;
+    right: 20px;
+    cursor: pointer;
+    text-shadow: 1px 1px 10px #333;
+}
+#moreInfo{
+    height:0px; /* toggles between 0 and 300 */
+    opacity: 0;
+    padding:20px;
+    width: 100%;
+    width: 100vw;
+    position: fixed;
+    bottom: 0;
+    left:0;
+    background-color:rgba(0,0,0,0.85);
+}
+#map{
+    height: 300px;
+    width:400px;
+    float:left;
+
+}
+#map-info{
+    float:left;
+    padding-left: 20px;
+    color: #eee;
+}
+#map-exit{
+    float:right;
+    cursor: pointer;
+    text-shadow: 1px 1px 10px #333;
+    padding-right:40px;
+}
+.hoverable:hover{
+    text-shadow: 1px 1px 5px #000;
+}
+video#bgvid {
+    position: fixed; left: 0; top: 0;
+    min-width: 100%; min-height: 100%;
+    width: auto; height: auto; z-index: -100;
+    background: url(default.png) no-repeat;
+    background-size: cover;
+}
